# floydipsum

./: .gitignore  README.md  pyproject.toml
src/floydipsum/: __main__.py
src/lyricsipsum/: __main__.py
