[project]
name = "floydipsum"
version = "0.1.0"
description = "Generates Lorem Ipsum text using Pink Floyd lyrics"
authors = [
    {name = "Steve Scholnick",email = "scholnicks@gmail.com"}
]
readme = "README.md"
license="MIT"
license-files=["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "docopt-ng (>=0.9.0,<0.10.0)",
    "lyricsgenius (>=3.7.2,<4.0.0)"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]
keywords = ["lorem", "ipsum", "text", "generator", "floyd", "pink", "lyrics", "utility", "command-line", "cli"]

[tool.poetry]
packages = [{include = "floydipsum", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
floydipsum = "floydipsum.__main__:main"
